--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "native-base": "^2.6.1",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-get-sms-android": "^1.3.3",
+    "react-navigation": "^2.5.3"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
