--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.6.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-android-sms-listener": "^0.5.0",
     "react-native-get-sms-android": "^1.3.3",
     "react-navigation": "^2.5.3"
   },
